2006-05-02  Raja R Harinath  <rharinath@novell.com>

	* flowanalysis.cs (Reachability.SetReturnsSometimes): Remove.
	(Reachability.SetThrowsSometimes): Likewise.
	(FlowBranchingBlock.MergeTopBlock): Don't compare against
	TriState.Always, use corresponding property.
	* statement.cs (Lock.Resolve, Try.Resolve, Using.Resolve): Likewise.
	(Block.Resolve): Likewise.  Remove some redundant checks.

2006-05-02  Raja R Harinath  <harinath@gmail.com>

	* flowanalysis.cs (UsageVector.Throw): Set barrier too.
	(Reachability.Meet): Don't bother checking AlwaysThrows --
	barrier is always set.
	(FlowBranchingBlock.Merge): Likewise.

2006-05-01  Rafael Teixeira <rafaelteixeirabr@hotmail.com>

	* attribute.cs: fixed_buffer_cache is declared only if NET_2_0 is
	defined, so it's references should also compile only for NET_2_0
	(as occurs in mcs version)

2006-05-01  Raja R Harinath  <harinath@gmail.com>

	* codegen.cs (EmitContext.ResolveTopBlock): Remove redundant
	checks for unreachable.

2006-05-01  Marek Safar  <marek.safar@seznam.cz>

	A fix for #77980
	*flowanalysis.cs (UsageVector.IsAssigned): Add flag to ignore short path.

	* statement.cs (Block.UsageWarning): Uses newly introduced flag to detect
	whether field is really assigned.

2006-04-30  Raja R Harinath  <harinath@gmail.com>

	* flowanalysis.cs (Reachability): Make 4-argument constructor
	private.
	(Reachability.Meet): Rename from 'And'.  Remove static variant.
	(Reachability.Always): Rename from the highly misleading
	'Reachability.Never'.
	(FlowBranching.Merge): Update to changes.  Mark an impossible
	situation with a 'throw'.
	(*): Update to changes.

2006-04-29  Raja R Harinath  <harinath@gmail.com>

	* flowanalysis.cs (TriState): Rename from FlowBranching.FlowReturns.
	Remove 'Undefined'.
	(FlowBranching.TriState_Meet): Rename from AndFlowReturns. Simplify.
	(FlowBranching.TriState_Max): Rename from OrFlowReturns. Simplify.
	(*): Update to changes.
	* statement.cs: Update to changes.
